--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
     "framer-motion": "^5.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
     "react-spring": "^9.0.0-rc.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "webpack-cli": "^4.9.1"
   }
