--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-parallax": "^3.3.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "react-spring": "^9.0.0-rc.3",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
